      finding segfaults in package code.

      \item In \code{layout()}, the limits on the grid size have been
      raised (again).

      \item New functions \code{checkPoFiles()} and \code{checkPoFile()}
      have been added to the \pkg{tools} package to check for
      consistency of format strings in translation files.

      \item New simple \code{provideDimnames()} utility.
    }
  }

  \subsection{LONG VECTORS}{
    \itemize{
      \item There are the beginnings of support for vectors longer than
      \eqn{2^{31}-1}{2^31 - 1} elements on 64-bit platforms.  This
      applies to raw, logical, integer, double, complex and character
      vectors, as well as lists.  (Elements of character vectors remain
      limited to \eqn{2^{31}-1}{2^31 - 1} bytes.)

      All aspects are currently experimental.

      \item What can be done with such vectors is currently rather
      limited, and most operations will return the error \sQuote{long
      vectors not supported yet}.  They can be serialized and
      unserialized, coercion, \code{identical()} and
      \code{object.size()} work and means can be computed.  Their
      lengths can be get and set by \code{xlength()}: calling
      \code{length()} on a long vector will throw an error.

      \item A limited amount of indexing is available.  Generally
      double-valued indices can be used to access elements beyond
      \eqn{2^{31}-1}{2^31 - 1}.

      \item There is some support for matrices with each dimension less
      than \eqn{2^{31}}{2^31} but total length more than that.

      \item \code{dist()} can produce dissimilarity objects for more
      than 65536 rows (but for example \code{cmdscale()} and
      \code{hclust()} cannot process such objects).

      \item \code{serialize()} to a raw vector is no longer limited in
      size on 64-bit platforms.

      \item The C-level function \code{R_alloc} can now allocate
      \eqn{2^{34}}{2^34} or more bytes on 64-bit platforms.
