@@ -54,6 +54,7 @@ typedef int R_len_t; /* will be long later, LONG64 or ssize_t on Win64 */
 #ifdef LONG_VECTOR_SUPPORT
     typedef ptrdiff_t R_xlen_t;
     typedef struct { R_xlen_t lv_length, lv_truelength; } R_long_vec_hdr_t;
+/* limit is 2^52, to ensure exact conversion to doubles */
 # define R_XLEN_T_MAX 4503599627370496
 # define R_SHORT_LEN_MAX 2147483647
 # define R_LONG_VEC_TOKEN -1
